# HL-Global-Mobility-Team2

./: .gitignore  CLAUDE.md  SangMin.md  연습.md
docs/: GIT_GUIDE.md  MBD_KIT.md  README.md  dynamic_architecture.drawio  state_machine_detail.drawio  system_architecture_v1.drawio  system_architecture_v3.drawio
src/adas_mgm/: CMakeLists.txt  README.md  package.xml
src/adas_mgm/config/: params.yaml
src/adas_mgm/core/: mgm_step.cpp  mgm_step.hpp  mgm_types.hpp
src/adas_mgm/launch/: mgm.launch.py
src/adas_mgm/src/: mgm_node.cpp  state_machine.cpp  state_machine.hpp  types.hpp
src/adas_mgm/tools/: core_replay.cpp  dump_format.hpp  make_sample_dump.cpp
src/bridge_dspace/: CMakeLists.txt  PROTOCOL.md  package.xml
src/bridge_dspace/launch/: bridge.launch.py  loopback_test.launch.py
src/bridge_dspace/src/: dspace_sim_node.cpp  dummy_ref_publisher.cpp  packet.hpp  udp_bridge_node.cpp
src/fma_interfaces/: CMakeLists.txt  package.xml
src/fma_interfaces/msg/: AvoidStatus.msg  EstopRequest.msg  GpsPath.msg  LanePath.msg  ParkingStatus.msg  RefPoint.msg  TargetRef.msg  TrafficStop.msg  VehicleVector.msg
src/stack_avoid/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_avoid/stack_avoid/: node.py
src/stack_estop/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_estop/stack_estop/: node.py
src/stack_gps/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_gps/stack_gps/: gga_link.py  node.py  path_engine.py
src/stack_gps/test/: test_path_engine.py
src/stack_gps/tools/base_station/: 99-ublox-f9p.rules  INDUSTRIAL_PC_SETUP.md  README.md  measure_base_position.py  ntrip_inject.py  rtcm_client_inject.py  rtcm_server.py  setup_base.py
src/stack_gps/tools/waypoints/: README.md  record_waypoints.py
src/stack_gps/waypoints/: waypoints_test1_20260723_181935.csv  waypoints_test1_20260723_182914.csv
src/stack_lane/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_lane/stack_lane/: node.py
src/stack_parking/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_parking/stack_parking/: node.py
src/stack_traffic/: REQUIREMENTS.md  package.xml  setup.cfg  setup.py
src/stack_traffic/stack_traffic/: node.py
