<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_dspace</name>
  <version>0.1.0</version>
  <description>PC↔dSPACE Ethernet UDP 브리지 — CLAUDE.md §3 계약의 유일한 구현 지점 (★ 최우선)</description>
  <maintainer email="kyg100800@gmail.com">FMA Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>fma_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
