<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stack_parking</name>
  <version>0.1.0</version>
  <description>주차공간 인식·로컬맵·주차 경로 + MPC/Vehicle MGM(dSPACE) — 담당: 손상민</description>
  <maintainer email="kyg100800@gmail.com">손상민</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>fma_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
