<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stack_traffic</name>
  <version>0.1.0</version>
  <description>신호등·정지선 인식 → 정지 요구 — 담당: 김재민</description>
  <maintainer email="kyg100800@gmail.com">김재민</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>fma_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
